<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="car.bkrc.com.car2018.car.car2024.ActivityView.FirstActivity">
    <group>
        <item
            android:id="@+id/full_automatic"
            android:title="@string/full_auto"
            app:showAsAction="always" />
    </group>
    <group>
       <item
           android:id="@+id/show_data"
           android:title="数据"
           app:showAsAction="always"
           />
    </group>
    <group>
        <item
            android:id="@+id/car_status"
            android:title="@string/follow_status"
            app:showAsAction="never" />
        <item
            android:id="@+id/car_control"
            android:title="@string/follow_control"
            app:showAsAction="never"/>
            <item
                android:id="@+id/angle_control"
                android:title="@string/angle_control"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/clear_coded_disc"
                android:title="@string/clear_coded_disc"
                app:showAsAction="never"
                />
    </group>

    <group>
        <item
            android:id="@+id/kong"
            android:title="     "
            app:showAsAction="always" />
    </group>

</menu>